# xg_entropy

./: README.md  pyproject.toml
src/xg-entropy/: export.py  metrics.py  pipeline.py
src/xg_entropy/: cli.py
src/xg_entropy*/: __init__.py  config.py  features.py  io.py  plotting.py
